--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     name: Generate premake
     runs-on: windows-latest
     steps:
+      - shell: cmd
       - uses: actions/checkout@master
       - run: generate_pardal.bat
       
@@ -19,6 +20,7 @@ jobs:
     runs-on: windows-latest
     needs: generate-premake
     steps:
+      - shell: cmd
       - uses: seanmiddleditch/gha-setup-vsdevenv@master
       - run: MSBuild.exe projects/pardal.sln /property:Configuration=Release
 
@@ -27,6 +29,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     steps:
+      - shell: cmd
       - run: bin\pardal-core-tests\Release\pardal-core-tests.exe
       
 
